<resources>
    <string name="app_name">GeoReminder</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_save">Save</string>
    <string name="action_share">Share</string>
    <string name="bundle_with_map">withMap</string>
    <string name="bundle_new_reminder">newReminder</string>
    <string name="bundle_most_recent_reminder">mostRecentReminder</string>
    <string name="new_geo">Geo Reminder</string>
    <string name="new_nor">Normal Reminder</string>
    <string name="empty_create_new">Create a new reminder</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="cancel">Cancel</string>
    <string name="register">Register</string>
    <string name="skip">Skip</string>
    <string name="proceed">Proceed</string>
    <string name="success">Success</string>
    <string name="theme_green">Green</string>
    <string name="theme_blue">Blue</string>
    <string name="theme_yellow">Yellow</string>
    <string name="theme_red">Red</string>
    <string name="theme_black">Dark</string>
    <string name="card_view_btn_edit">Edit</string>
    <string name="card_view_btn_map">View in Map</string>
    <string name="card_view_txt_distance_to_current">Distance:</string>
    <string name="card_view_txt_date">Date:</string>
    <string name="card_view_txt_no_hurry">There\'s no hurry…</string>
    <string name="img_avatar">Avatar</string>
    <string name="img_map">Map</string>
    <string name="img_logo">LOGO</string>
    <string name="img_no_location">No Location</string>
    <string name="img_no_reminder">No Reminder</string>
    <string name="dialog_delete_title">Delete</string>
    <string name="dialog_share_title">Share</string>
    <string name="dialog_edit_title">Edit</string>
    <string name="dialog_pos_btn">Yes</string>
    <string name="dialog_neg_btn">Cancel</string>
    <string name="dialog_confirm_btn">OK</string>
    <string name="dialog_delete_msg">Do you want to delete this reminder?</string>
    <string name="dialog_share_msg">Share with&#8230;</string>
    <string name="dialog_new_geo">New Geo Reminder</string>
    <string name="reminder_title">Title</string>
    <string name="reminder_default_title">Untitled Reminder</string>
    <string name="location_default_title">Untitled Location</string>
    <string name="color_picker_title">Reminder Color</string>
    <string name="color_picker_sub">Theme</string>
    <string name="button_done">Done</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_back">Back</string>
    <string name="button_custom">Custom</string>
    <string name="button_preset">Preset</string>
    <string name="hint_reminder_title">Title</string>
    <string name="hint_reminder_description">Description</string>
    <string name="hint_reminder_additional">Additional</string>
    <string name="default_date">Today</string>
    <string name="default_time">Now</string>
    <string name="default_time_range">8:00 ~ 20:00</string>
    <string name="with_time">Time Limit</string>
    <string name="time_all_day">All Day</string>
    <string name="time_always">Always</string>
    <string name="repeat_options">Repeat Options</string>
    <string name="repeat_option_repeat_everyday">Repeat Everyday</string>
    <string name="repeat_option_point_to_point">Point to Point</string>
    <string name="repeat_option_all_day">All Day</string>
    <string name="point_to_point_time_format" formatted="false">%02d:%02d</string>
    <string name="time_range_time_format" formatted="false">%02d:%02d ~ %02d:%02d</string>
    <string name="feedback_subject">Feedback on GeoReminder</string>
    <string name="feedback_content">Hi Peter,\n\nI would like to say a few words about GeoReminder: \n</string>
    <string name="feedback_content_map">Hi Peter,\n\nI would like to say a few words about the map section of GeoReminder: \n</string>
    <string name="send_feedback">Send Feedback&#8230;</string>
    <string name="parse_app_id">j5LhuXf9kpeP81DZkf2MFFqhTGZijntJoT290hLY</string>
    <string name="parse_client_key">pcbALD79URPIFzwjZm4oitYsatmRsLljSFHpsbRq</string>
    <string name="twitter_consumer_key">DMsWio2hohKMIz1dq065X82vQ</string>
    <string name="twitter_consumer_secret">CfiiWkDfktGHVDeFfbMWqWC9daXISRJbDIpBlMkwb09M2uqkhS</string>
    <string name="twitter_app_id">8794708</string>
    <string name="facebook_app_id">884536681641610</string>
    <string name="facebook_app_secret">5640a219ba68cf7e8dc05f22c75f06d1</string>
    <string name="tencent_app_id">1105087374</string>
    <string name="tencent_app_key">3QJaMkVEEzLPut0B</string>
    <string name="development_key_hash">PO6pIYq//0wDw3cu9uLKJfaeKTI=</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_short">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_password_does_not_match">Password does not match</string>
    <string name="exception_connection_failed">Connection Failed</string>
    <string name="exception_internal_server_error">Internal Server Error</string>
    <string name="exception_timeout">Connection Timeout</string>
    <string name="exception_validation_error">Validation Error</string>
    <string name="exception_invalid_email">Email not found</string>
    <string name="exception_email_already_linked">Email already linked</string>
    <string name="exception_invalid_login_param">Invalid log in parameter</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="login_with_facebook">Log in with Facebook</string>
    <string name="login_with_twitter">Log in with Twitter</string>
    <string name="login_with_qq">Log in with QQ</string>
    <string name="google_map">Google Map</string>
    <string name="amap_map">AMap</string>
    <string name="reminder_location">Reminder Location</string>
    <string name="my_location">Current Location</string>
    <string name="marker_dragging">Pick a location</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="nav_title_map_types">Map Type</string>
    <string name="nav_title_commu">Communication</string>
    <string name="nav_sec_other">Others</string>
    <string name="nav_local_email">Local User</string>
    <string name="nav_opt_all">All Reminders</string>
    <string name="nav_opt_draft">Drafts</string>
    <string name="nav_opt_geo">Geo Reminders</string>
    <string name="nav_opt_nor">Normal Reminders</string>
    <string name="nav_opt_view_in_map">View in Map</string>
    <string name="nav_opt_about">About</string>
    <string name="nav_opt_support">Support</string>
    <string name="nav_feedback">Feedback</string>
    <string name="nav_setting">Settings</string>
    <string name="nav_head_appname">GeoReminder</string>
    <string name="nav_head_username">Local</string>
    <string name="nav_acct_switch">Switch Account</string>
    <string name="nav_acct_manage">Manage Account</string>
    <string name="nav_acct_logout">Log Out</string>
    <string name="nav_desc_switch">Switch to Another Account</string>
    <string name="nav_desc_manage">Manage Your Account</string>
    <string name="nav_desc_logout">Log out of Your Account</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="qq">QQ</string>
    <string name="map_normal">Normal</string>
    <string name="map_hybrid">Hybrid</string>
    <string name="map_terrain">Terrain</string>
    <string name="map_satellite">Satellite</string>
    <string name="map_night">Night</string>
    <string name="map_my_position">To My Position</string>
    <string name="title_syncing">Syncing</string>
    <string name="title_location">Locations</string>
    <string name="title_untitled">Untitled</string>
    <string name="title_edit_existing">Edit</string>
    <string name="title_page_settings">Preferences</string>
    <string name="title_view_whole_map">All Pins</string>
    <string name="title_activity_whole_map_screen">All Events</string>
    <string name="title_activity_login_screen">Sign in</string>
    <string name="title_activity_register_screen">Register</string>
    <string name="title_activity_test">Map</string>
    <string name="parse_user_identifier">identifier</string>
    <string name="parse_user_userNameSet">userNameSet</string>
    <string name="svcs_unavail">One or more Google Service Components unavailable, you might not be able to use the geolocation for the reminders</string>
    <string name="svcs_cancel">Connection to Google Play Service is cancelled</string>
    <string name="svcs_acct_invalid">Your Google Account is invalid</string>
    <string name="svcs_missing">Google Play Service is missing on your device, this might result in the unavailability of geolocation function for reminders</string>
    <string name="svcs_updating">Google Play Service on this device is currently updating, please try later</string>
    <string name="svcs_disabled">Google Play Service on this device is disabled, please enable Google map function</string>
    <string name="svcs_signin">Please sign in to Google Play Service before using geolocation function</string>
    <string name="svcs_req_update">Google Play Service version is too old</string>
    <string name="svcs_other">Ran into some problems when initialising Google Play Service</string>
    <string name="cat_general">General</string>
    <string name="cat_about">About</string>
    <string name="cat_view">View</string>
    <string name="cat_sync">Sync</string>
    <string name="cat_map">Map</string>
    <string name="pref_theme">Theme</string>
    <string name="pref_show_anim">Animation</string>
    <string name="pref_rate">Rate This App</string>
    <string name="pref_show_draft">Show Drafts</string>
    <string name="pref_auto_sync">Auto Backup</string>
    <string name="pref_choose_map">Choose Map Service</string>
    <string name="pref_map_dialog_title">Map Service</string>
    <string name="pref_about_me">About Me</string>
    <string name="pref_anim_dialog_msg">Changes will take effect after next launch</string>
    <string name="pref_is_refreshing">Is Refreshing</string>
    <string name="pref_refresh_enabled">Refresh Enabled</string>
    <string name="pref_back_to_top">Back To Top</string>
    <string name="pref_app_bar_enabled">AppBar Enabled</string>
    <string name="shared_pref_google_avail">googleMapAvailable</string>
    <string name="shared_pref_tutorial_shown">tutorialAlreadyShown</string>
    <string name="shared_pref_which_map">whichMap</string>
    <string name="shared_pref_show_animation">showAnim</string>
    <string name="shared_pref_local_storage_reminders">localReminders</string>
    <string name="press_again_exit">Press again to exit</string>
    <string name="activity_not_fonud">Necessary Application Not Found</string>
    <string name="main_no_reminder">Your reminder list is empty.</string>
    <string name="main_no_location">Your location list is empty.</string>
    <string name="login_success">Log in successful</string>
    <string name="failed_fetch_email">Failed to fetch user email</string>
    <string name="support_thank_msg">Thank you! Mental support is sufficient at this point!</string>
</resources>