<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_opt_all" android:icon="@drawable/ic_nav_all"
            android:title="@string/nav_opt_all"
            android:checked="true"/>
        <item android:id="@+id/nav_opt_geo" android:icon="@drawable/ic_nav_geo"
            android:title="@string/nav_opt_geo" />
        <item android:id="@+id/nav_opt_nor" android:icon="@drawable/ic_nav_nor"
            android:title="@string/nav_opt_nor" />
        <item android:id="@+id/nav_opt_draft" android:icon="@drawable/ic_nav_draft"
            android:title="@string/nav_opt_draft" />
    </group>


    <item android:title="Communicate">
        <menu>
            <item android:id="@+id/nav_feedback" android:icon="@drawable/ic_nav_feedback"
                android:title="@string/nav_feedback" />
            <item android:id="@+id/nav_settings" android:icon="@drawable/ic_nav_setting"
                android:title="@string/nav_setting" />
        </menu>
    </item>

</menu>