<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="general"
        android:title="@string/cat_general">

        <ListPreference
            android:key="colorTheme"
            android:title="@string/pref_theme"
            android:dialogTitle="@string/pref_theme"
            android:entries="@array/color_theme_entry"
            android:entryValues="@array/color_theme_value"
            android:defaultValue="0"/>

    </PreferenceCategory>

    <!--TODO: remove preference if Google isn't available-->
    <PreferenceCategory
        android:key="map"
        android:title="@string/cat_map">

        <ListPreference
            android:key="whichMap"
            android:title="@string/pref_choose_map"
            android:dialogTitle="@string/pref_dialog_title"
            android:entries="@array/map_service_entry"
            android:entryValues="@array/map_service_value"
            android:defaultValue="0"
            android:enabled="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="view"
        android:title="@string/cat_view">

        <CheckBoxPreference
            android:key="show_draft"
            android:title="@string/pref_show_draft"
            android:defaultValue="false"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="sync"
        android:title="@string/cat_sync">

        <SwitchPreference
            android:key="auto_sync"
            android:title="@string/pref_autosync"
            android:defaultValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="about"
        android:title="About">

        <Preference
            android:key="rate"
            android:title="@string/pref_rate">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="market://details?id=com.peter.georeminder" />

        </Preference>

    </PreferenceCategory>

</PreferenceScreen>