<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:orientation="vertical">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edittext_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:hint="@string/hint_reminder_title"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelText="@string/hint_reminder_title"
                app:met_primaryColor="@color/colorPrimary"/>
            
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edittext_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:inputType="textMultiLine"
                android:lines="5"
                android:scrollbars="vertical"
                android:hint="@string/hint_reminder_description"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelText="@string/hint_reminder_description"
                app:met_primaryColor="@color/colorPrimary"/>
            
            <TextView
                android:id="@+id/textview_color_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/color_picker_title"
                android:textColor="@color/colorPrimary"
                android:clickable="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:textSize="24sp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>