<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="fill_vertical"
    tools:context=".MainScreen">

    <!--<android.support.v4.widget.SwipeRefreshLayout-->
        <!--android:id="@+id/swipe_to_refresh_layout"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->

        <!--<android.support.v7.widget.RecyclerView-->
            <!--android:id="@+id/recycler_layout"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent" />-->

    <!--</android.support.v4.widget.SwipeRefreshLayout>-->

    <jp.co.recruit_lifestyle.android.widget.WaveSwipeRefreshLayout
        android:id="@+id/reminder_swipe_to_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/reminder_recycler_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </jp.co.recruit_lifestyle.android.widget.WaveSwipeRefreshLayout>

    <ImageView
        android:id="@+id/image_no_reminder"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:src="@drawable/empty_list"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/img_no_reminder"/>

    <TextView
        android:id="@+id/text_no_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_no_reminder"
        android:textSize="26sp"
        android:layout_below="@id/image_no_reminder"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/borderless_btn_new_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/empty_create_new"
        android:layout_below="@+id/text_no_reminder"
        android:layout_centerHorizontal="true"
        style="?android:attr/borderlessButtonStyle"
        android:textColor="@color/colorPrimary"/>

</RelativeLayout>